<resources>
    <string name="app_name">MarkPGT</string>
    <string name="title_sign_in">Вход</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="button_sign_text">Войти</string>
    <string name="forgot"><u>Забыли пароль?</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мартель Данил Анатольевич</string>
    <string name="nav_header_subtitle">martel.member@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_person">Профиль</string>
    <string name="menu_settings">Настройки</string>

    <string name="text_rec_book">Зачетная книжка студента</string>
    <string name="text_marks">Оценки</string>

    <string name="text_discipline">Дисциплина</string>
    <string name="text_mark">Оценка</string>
    <string name="text_late">Пропущено, ч.</string>


    <string name="text_book">Зачетная книжка</string>
    <string name="text_sem">Семестр</string>
    <string name="text_surStud">Фамилия студента</string>
    <string name="text_nameStud">Имя студента</string>
    <string name="text_patStud">Отчество студента</string>
    <string name="text_dis">Дисциплина</string>
    <string name="text_hour">Количество часов</string>
    <string name="text_score">Оценка</string>
    <string name="text_examD">Дата экзамена</string>
    <string name="text_hourL">Количество пропущенных часов</string>
    <string name="text_surTea">Фамилия преподавателя</string>
    <string name="text_nameTea">Имя преподавателя</string>
    <string name="text_patTea">Отчество преподавателя</string>

    <string name="text_user_info">Информация о пользователе</string>
    <string name="text_email_person">Эл. почта:</string>
    <string name="text_description_person">Описание:</string>
    <string name="text_description_person_edit">Описание отсутствует</string>

    <string name="text_sign_out">Выход</string>

    <string name="text_settings_user">Настройки профиля</string>
    <string name="text_email">Адрес электронной почты</string>
    <string name="text_description">Описание</string>
    <string name="text_confirm_info_user">Сохранить изменения</string>

    <string name="text_tvb_design">Внешний вид</string>
    <string name="text_tvb_about_app">О приложении</string>
</resources>